<resources>
    <string name="app_name">MemeFun</string>
    <string name="new_user_signup">No have an account yet ?<b> Sign Up!</b> </string>
    <string name="memefun">Meme<font fgcolor="#FFBE33">Fun</font></string>
    <string name="type_your_name_here">Insert your full name</string>
    <string name="type_your_email_here">Insert an email valid</string>
    <string name="type_your_password_here">Insert a password</string>
    <string name="type_your_confirm_password">confirm your password</string>
    <string name="logo_of_memefun">Logo of MemeFun</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="meme_fun_logo">MemeFun Logo</string>
    <string name="text_sign_in">Text sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">Login</string>
    <string name="full_name">full name</string>
    <string name="sign_up">Sign up</string>
    <string name="background">background</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">username</string>
    <string name="edit_button">Edit button</string>
    <string name="welcome">Bem-Vindo!</string>
    <string name="welcome_description">TáNaMão!\nSua doação direta está a um toque de distância para transformar vidas.</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Criar Conta</string>
    <string name="copyright">© TáNaMão 2023</string>
    <string name="login_description">Seja bem-vindo de volta ao seu app de doações!</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_google">Continuar com o Google</string>
    <string name="login_register">Criar nova conta</string>
    <string name="register_description">Em alguns instantes você iniciará a sua experiência com o TáNaMão!</string>
    <string name="register_btn">Criar</string>
    <string name="item_date_post">Postado há x dias</string>
    <string name="item_type">Móveis</string>
    <string name="item_name">Nome do produto</string>
    <string name="item_features">Especificações</string>
    <string name="item_btn">Quero!</string>
    <string name="item_donated">Doado por Lais</string>
    <string name="item_liear_state">Condição</string>
</resources>