<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_vertical_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#636363"
    android:backgroundTint="#636363"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:override="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_constraint"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/background_rounded_input">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="50dp"
            android:text="@string/welcome_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/welcome__copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/copyright"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_description" />

        <Button
            android:id="@+id/welcome_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/welcome_register"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/welcome_register_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/welcome_login"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/welcome_login_button"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>