<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.item.ui.ItemActivity">


    <Button
        android:id="@+id/itemBtn"
        android:layout_width="32dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_narrow_arrow_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/itemCardView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/background_rounded_darkgreen"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemBtn"
        app:layout_constraintTop_toTopOf="@+id/itemBtn">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="10dp"
            android:text="@string/item_donated" />

        <androidx.cardview.widget.CardView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="50dp"
            android:layout_weight="2"
            app:cardCornerRadius="300dp">

            <ImageView
                android:id="@+id/imageCardImg"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:scaleType="centerCrop"
                android:src="@tools:sample/avatars"
                app:srcCompat="@drawable/me" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/itemImgProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:scaleType="center"
        android:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_rounded_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImgProduct"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/itemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/item_type"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/item_date_post"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemType" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/item_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemType" />

        <TextView
            android:id="@+id/itemState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:text="@string/item_features"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <Button
            android:id="@+id/itemButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_rounded_input_white"
            android:backgroundTint="@android:color/white"
            android:text="@string/item_btn"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/item-linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_rounded_darkgreen"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/itemButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemState">

            <TextView
                android:id="@+id/item_linear_state"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_rounded_darkergreen"
                android:padding="11dp"
                android:text="@string/item_liear_state"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="11dp"
                android:text="Usado"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>